adding hevc_transcoding-eharano

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
+*.swp
 *~
 *#
-*.swp
+
+*.pyc
 
 videos
 software
+
+hevc_transcoding-eharano/*
+!hevc_transcoding-eharano/batch
+!hevc_transcoding-eharano/sandbox
+!hevc_transcoding-eharano/shell
+
+!hevc_transcoding-eharano/VideoSimScript
+hevc_transcoding-eharano/VideoSimScript/*/
