--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ hevc_transcoding-eharano/software/HM-16.6/build/vc9/Win32/
 hevc_transcoding-eharano/software/HM-16.6/build/linux/**/objects/
 
 hevc_transcoding-eharano/software/d65_gt/build_*/
+hevc_transcoding-eharano/software/d65_gt/tools/downScale/bin/linux/downScale
