--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ hevc_transcoding-eharano/software/HM-16.6/build/linux/**/objects/
 
 hevc_transcoding-eharano/software/d65_gt/build_*/
 hevc_transcoding-eharano/software/d65_gt/tools/downScale/bin/linux/downScale
+
+hevc_transcoding-eharano/software/PSNRStatic/bin/
